202205_토큰화.csv 사용하도록 일부 수정

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ retrieval/__pycache__/retrieval.cpython-310.pyc
 summalize/__pycache__/ocr.cpython-39.pyc
 summalize/__pycache__/summalize_f.cpython-39.pyc
 *.pyc
+다음뉴스_202205_토큰화.csv
