--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ summalize/__pycache__/ocr.cpython-39.pyc
 summalize/__pycache__/summalize_f.cpython-39.pyc
 *.pyc
 다음뉴스_202205_토큰화.csv
+summalize/.DS_Store
